assets/stylesheets/style.css
@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');

body {
	background: #fff;
	font-family: Lato, sans-serif;
	font-weight: 300;
	color: #333;
	margin: 0 0 80px;
	font-size: 15px;
}

a {
	color: #E32B46;
}

a:focus, a:hover {
	color: #333;
	text-decoration: none;
}

strong {
	font-size: smaller;
	font-weight: 400;
	color: #333;
}

p {
	line-height: 1.5;
	margin: 0 0 .5em 0;
}

p + p {
	margin-top: 10px;
}

h1, h2, h3, h4 {
	margin-top: 0;
	font-weight: 300;
	color: #555;
}

section {
	margin-top: 24px;
}

ul, ol {
	padding-left: 21px;
}

li {
	line-height: 1.8;
	list-style: none;
}

li:before {
	content: "\f052";
	float: left;
	font: 16px Octicons;
	margin-top: 6px;
	margin-left: -20px;
	opacity: .1;
	position: absolute;
}

blockquote {
  border-left: 3px solid #e7e9ec;
  font-size: 14px;
  margin-bottom: 4px;
}

em {
	color: #666;
	font-weight: 300;
	font-style: normal;
}

h4 span:first-child {
	color: #333;
	font-weight: 400;
}

.container {
	max-width: 750px;
	padding: 0 30px;
}

.col-sm-6 {
	margin-bottom: 10px;
}

.col-sm-12 h4 {
	margin-top: 12px;
}

.col-sm-12 + .col-sm-12 {
	margin-top: 30px;
}

#header {
	padding: 50px 0 25px;
}

#header h2 {
	color: #95a5a6;
	font-size: 24px;
}

#content h3 {
	color: #555;
	font-size: 26px;
	margin-top: -4px;
}

#content aside {
	text-align: right;
	padding-right: 30px;
}

#profiles .network {
	text-transform: capitalize;
}

#work .position,
#volunteer .position {
	font-weight: 400;
	margin-bottom: 8px;
}

#education .area {
	font-weight: 400;
}

#education .area:before {
	content: "\f0d7";
	font: 16px Octicons;
	margin-right: 6px;
}

#education .studyType {
	margin-left: 25px;
}

#awards .summary,
#publications .summary {
	margin-top: 8px;
}

#publications .website a:before {
	content: attr(href);
}

@media (min-width: 480px) {
	.strike-through {
		border-top: 1px solid #f4f6f6;
		height: 20px;
		margin-top: 12px;
		margin-bottom: -2px;
		position: relative;
  }

	.strike-through span,
	.strike-through a {
		background: #fff;
		position: absolute;
  }

	.strike-through span:first-child {
		padding-right: 20px;
		margin-top: -12px;
  }

	.strike-through span + span {
		font-size: 14px;
		margin-top: -10px;
		padding-left: 20px;
		right: 0;
	}
}

@media (max-width: 768px) {
	.col-sm-6:last-child {
		margin-bottom: 0px;
  }

	/* #content aside {
		margin-bottom: 20px;
		padding-right: 0;
		text-align: left;
  } */

	#publications .website a:before {
		content: "View publication";
	}
}

@media (max-width: 480px) {
	h1 {
		font-size: 28px;
  }

	#header h2 {
		font-size: 24px;
  }

	#content h3 {
		font-size: 20px;
  }

	h4 {
		font-size: 16px;
  }

	.date {
		font-size: 14px;
		margin-bottom: 5px;
  }

	.strike-through span:first-child {
		margin-bottom: 7px;
  }

	.strike-through span {
		display: block;
  }

	#header {
		padding: 30px 0 0;
  }

	#actions {
		display: none;
	}
}

@media print {
	body {
		font-size: 12px;
  }

	a[href]:after {
		display: none;
  }

	h1 {
		font-size: 24px;
  }

	#header h2 {
		font-size: 18px;
		margin-top: -8px;
  }

	h4 {
		font-size: 13px;
  }

  #header {
		padding: 0;
	}

	#content aside {
		margin: 0 !important;
	}

	#content h3 {
		font-size: 16px;
		margin-top: 0;
	}

	blockquote {
		border: 0;
		border-left: 3px solid #e7e9ec;
		font-size: 12px;
	}

	li:before {
		font: 10px Octicons;
	}

	.strike-through {
		border-top-color: transparent;
  }

	.strike-through span + span {
		font-size: 12px;
  }

	.col-sm-push-3 {
    left: 25%;
  }

	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
    float: left;
  }

	.col-sm-12 {
	  width: 100%;
  }

	.col-sm-11 {
	  width: 91.66666666666666%;
  }

	.col-sm-10 {
	  width: 83.33333333333334%;
  }

	.col-sm-9 {
	  width: 75%;
  }

	.col-sm-8 {
	  width: 66.66666666666666%;
  }

	.col-sm-7 {
	  width: 58.333333333333336%;
  }

	.col-sm-6 {
	  width: 50%;
  }

	.col-sm-5 {
	  width: 41.66666666666667%;
  }

	.col-sm-4 {
	  width: 33.33333333333333%;
  }

	.col-sm-3 {
	  width: 25%;
  }

	.col-sm-2 {
	  width: 16.666666666666664%;
  }

	.col-sm-1 {
	  width: 8.333333333333332%;
  }
}

